--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,9 +11,9 @@
     />
   </head>
   <body>
-    <div class="container" style="background-color:beige">
+    <div class="container" style="background-color:LightCoral">
       <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center" style="background-color:slategrey">
+      <div class="jumbotron text-center" style="background-color:Beige">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
         <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
